Update project configuration to disable MSIX tooling and streamline asset management. Adjust launch settings to simplify project profile naming.

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,10 +1,7 @@
 {
   "profiles": {
-    "silence! (Unpackaged)": {
+    "silence!": {
       "commandName": "Project"
-    },
-    "silence! (Packaged)": {
-      "commandName": "MsixPackage"
     }
   }
 }
