Refactor window activation logic to prevent flashing when starting minimized. Implement Mica backdrop support for Windows 11 and streamline the release build script for multiple architectures. Update project settings to enable self-contained deployment.

--- a/Silence!.csproj
+++ b/Silence!.csproj
@@ -16,6 +16,7 @@
     <!-- Unpackaged deployment - no MSIX bullshit -->
     <EnableMsixTooling>false</EnableMsixTooling>
     <WindowsPackageType>None</WindowsPackageType>
+    <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
     
     <!-- Reduce package size -->
     <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
