Implement update check functionality and UI notifications
- Added an UpdateService to handle update checks on application startup and user-triggered checks.
- Introduced events for update availability notifications in App.xaml.cs and MainWindow.xaml.cs.
- Enhanced the AboutPage.xaml to display update status and provide options for downloading updates.
- Updated MainWindow.xaml to include UI elements for displaying update notifications.
- Modified SettingsService to manage update check preferences.
- Updated versioning in Silence!.csproj and installer scripts for version 1.1.

--- a/Silence!.csproj
+++ b/Silence!.csproj
@@ -13,6 +13,11 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ApplicationIcon>Assets\app.ico</ApplicationIcon>
     
+    <!-- App Version - update this for releases (Major.Minor format, e.g., 1.0, 1.1) -->
+    <Version>1.1</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    
     <!-- Unpackaged deployment - no MSIX bullshit -->
     <EnableMsixTooling>false</EnableMsixTooling>
     <WindowsPackageType>None</WindowsPackageType>
