--- a/Chocolatey/silence!.nuspec
+++ b/Chocolatey/silence!.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>silence</id>
-    <version>1.4.1</version>
+    <version>1.5</version>
     <packageSourceUrl>https://github.com/vertopolkaLF/silence</packageSourceUrl>
     <owners>vertopolkaLF</owners>
     <title>silence!</title>
@@ -24,35 +24,15 @@ A simple, lightweight microphone mute toggle for Windows with global hotkey supp
 
 ## Features
 
-- **Global Hotkey** â€” Mute/unmute your microphone from anywhere using a customizable keyboard shortcut
-- **System Tray** â€” Lives quietly in your system tray with a color-coded icon (green unmuted / red muted)
-- **Quick Toggle** â€” Single click on the tray icon to toggle mute state
-- **Visual Overlay** â€” Optional always-on-top indicator showing your mute status with smooth animations
-- **Sound Feedback** â€” Audio cues when you mute/unmute with 8 preloaded sounds or custom sounds
-- **Modifier Support** â€” Use complex hotkeys like `Ctrl + Alt + M` or simple ones like `F13`
-- **Flexible Matching** â€” Option to ignore additional modifiers
-- **Auto-Start** â€” Optionally launch with Windows
-- **Modern UI** â€” Mica/Acrylic backdrop, smooth animations, native Windows 10/11 look
-- **Portable** â€” No MSIX installer required, just extract and run
-
-## What's New in v1.4
-
-### Complete Overlay Rewrite
-- **Pure Win32 Layered Window** â€” Faster, lighter, and actually works properly
-- **True Click-Through** â€” Overlay is completely invisible to your cursor
-- **Smooth Animations** â€” Buttery smooth fade-in/fade-out animations
-
-### Appearance Customization
-- **Show Text Option** â€” Toggle between icon-only or icon with text
-- **Icon Styles** â€” Choose between colored (red/green) or monochrome icons
-- **Background Styles** â€” Dark or light background
-- **Opacity Controls** â€” Separate sliders for background and content opacity
-- **Border Radius** â€” Adjust corner rounding from 0px to 24px
-- **Border Toggle** â€” Show or hide the Windows 11 style border
-
-### New Visibility Mode
-- **Show After Toggle** â€” Overlay appears briefly after you mute/unmute, then disappears automatically
-- **Customizable Duration** â€” Set how long the overlay stays visible (0.1 to 10 seconds)
+- **Global Hotkey** – Mute/unmute your microphone from anywhere using a customizable keyboard shortcut
+- **System Tray** – Lives quietly in your system tray with a color-coded icon (green unmuted / red muted)
+- **Quick Toggle** – Single click on the tray icon to toggle mute state
+- **Visual Overlay** – Optional always-on-top indicator showing your mute status with smooth animations
+- **Sound Feedback** – Audio cues when you mute/unmute with 8 preloaded sounds or custom sounds
+- **Modifier Support** – Use complex hotkeys like `Ctrl + Alt + M` or simple ones like `F13`
+- **Flexible Matching** – Option to ignore additional modifiers
+- **Auto-Start** – Optionally launch with Windows
+- **Modern UI** – Mica/Acrylic backdrop, smooth animations, native Windows 10/11 look
 
 ## System Requirements
 
@@ -60,7 +40,7 @@ A simple, lightweight microphone mute toggle for Windows with global hotkey supp
 - Windows 11 supported
 - .NET 8.0 Runtime (included in installer)
 ]]></description>
-    <releaseNotes>https://github.com/vertopolkaLF/silence/releases/tag/v1.4.1</releaseNotes>
+    <releaseNotes>https://github.com/vertopolkaLF/silence/releases/tag/v1.5</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
